Overflow fix

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -52,13 +52,9 @@
 
 /* -- Elements -- */
 
-#root{
-    border: 1px solid green;
-}
-
 #viewport{
     height: 100vh;
-    width: 100vw;
+    width: 100%;
 }
 
 body{
@@ -85,7 +81,7 @@ nav{
 
 .logo{
     padding: 0 25px;
-    margin-right: 75px;
+    margin-right: 100px;
 }
 
 .links{
@@ -93,7 +89,8 @@ nav{
 }
 
 .nav-link{
-    padding: 0 15px;
+    margin: 0 10px;
+    padding: 0 20px;
     color: inherit;
 }
 .nav-link:hover{
